# yap

./: .gitignore  AGENTS.md  README.md  SPEC.md  build.sh
.github/workflows/: build.yml  release.yml  tauri-build.yml  windows-build.yml
Resources/: Info.plist
Sources/: AppDelegate.swift  AudioRecorder.swift  HistoryWindow.swift  HotkeyManager.swift  OverlayPanel.swift  PasteManager.swift  SettingsWindow.swift  TextFormatter.swift  Transcriber.swift  TranscriptionHistory.swift  main.swift
tauri-app/: README.md  package-lock.json  package.json  vite.config.js
tauri-app/src/: history.html  history.ts  overlay.html  overlay.svelte.ts  settings.html  settings.ts
tauri-app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/sidecar-overlay/Sources/: IPCProtocol.swift  OverlayLayout.swift  OverlayPanel.swift  main.swift
tauri-app/src-tauri/src/: audio.rs  audio_ducking.rs  config.rs  formatting.rs  history.rs  hotkey.rs  lib.rs  orchestrator.rs  paste.rs  sidecar.rs  speech.rs  transcription.rs  tray.rs  vad.rs  win_overlay.rs  windows.rs
windows/: ARCHITECTURE.md  README.md  UX-DESIGN.md  build.ps1  convert-sounds.sh
windows/Yap/: App.xaml  App.xaml.cs  Yap.csproj  Yap.sln
windows/Yap/Audio/: AudioRecorder.cs  FftProcessor.cs  SoundPlayer.cs
windows/Yap/Core/: AppOrchestrator.cs  AppState.cs  Config.cs  Logger.cs
windows/Yap/Formatting/: AnthropicFormatter.cs  GeminiFormatter.cs  GroqFormatter.cs  IFormattingProvider.cs  OpenAiFormatter.cs
windows/Yap/Input/: HotkeyManager.cs  PasteManager.cs
windows/Yap/Models/: HistoryEntry.cs  TranscriptionResult.cs  YapConfig.cs
windows/Yap/Onboarding/: OnboardingManager.cs
windows/Yap/Transcription/: DeepgramTranscriber.cs  ElevenLabsTranscriber.cs  GeminiTranscriber.cs  ITranscriptionProvider.cs  OpenAiTranscriber.cs  TranscriptionHelpers.cs  WindowsSpeechTranscriber.cs
windows/Yap/UI/: HistoryWindow.xaml  HistoryWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TrayIcon.cs  (+1 more)
windows/installer/: setup.iss
(+9 files in other folders)
