[package]
name = "yap"
version = "2.1.1"
description = "Yap - Cross-platform voice-to-text"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture and processing
cpal = "0.15"
hound = "3.5"
rustfft = "6.2"
earshot = "1.1.0"

# HTTP and JSON
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }

# Clipboard and input simulation
enigo = { version = "0.2", features = ["serde"] }
arboard = "3"

# Audio playback (sound effects)
rodio = "0.19"

# Base64 encoding for API calls
base64 = "0.22"

# UUID generation for history entries
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Directory paths
dirs = "5"

# Lazy statics
once_cell = "1"

# Font rasterization (Windows overlay text)
fontdue = "0.9"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
# 2D rendering for native overlay pill
tiny-skia = "0.11"
windows = { version = "0.58", features = [
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }
